# keepaway

./: .gdbinit  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  ChangeLog  Makefile  README  README.md  batch-evaluate.sh  batch-gamma-weight-q.sh  batch-gamma-weight.sh  batch-train.sh  batch.sh  bt.sh  build.sh  clear.sh  dbg  dbg.sh  debug-batch-train.sh  debug-evaluate.sh  debug-train.sh  evaluate.sh  incomplete.rcg  initrc  keepaway.py  kill.sh  nohup.out  run.sh  train-hive.sh  train.sh  train_monitoring.sh  train_synching.sh  trainall.sh
data/: 20170904054355-Q_g1._l0.227_a0.09_w0.346_fsm.kwy  Q_g1._l0.227_a0.09_w0.346_fsm.console  README  README.md
data/logs/: 20160805141744-Q_H1_G.5_fs.kwy  20160805141754-Q_H1_G.75_fs.kwy  20160805141804-Q_H1_G.875_fs.kwy  20160805141814-Q_H1_G.9375_fs.kwy  20160805141824-Q_H1_G.96875_fs.kwy  20160805141834-Q_H1_G.984375_fs.kwy  20160805141844-Q_H1_G.9921875_fs.kwy  20160805141854-Q_H1_G.99609375_fs.kwy  20160805141904-Q_H1_G.998046875_fs.kwy  20160805141914-Q_H1_G.9990234375_fs.kwy  20160805141924-Q_H1_G1._fs.kwy  20160805141924-Q_H2_G.5_fs.kwy  20160805141934-Q_H2_G.75_fs.kwy  20160805141944-Q_H2_G.875_fs.kwy  20160805141954-Q_H2_G.9375_fs.kwy  20160805142004-Q_H2_G.96875_fs.kwy  20160805142014-Q_H2_G.984375_fs.kwy  20160805142024-Q_H2_G.9921875_fs.kwy  20160805142034-Q_H2_G.99609375_fs.kwy  20160805142044-Q_H2_G.998046875_fs.kwy  20160805142054-Q_H2_G.9990234375_fs.kwy  20160805142104-Q_H2_G1._fs.kwy  20160805142114-random_FS.kwy  20160805142124-hand_FS.kwy  20160805142134-hold_FS.kwy  20160926160051-Q_H2_G.5_fs.kwy  20160926160101-Q_H2_G.75_fs.kwy  20160926160111-Q_H2_G.875_fs.kwy  20160926160121-Q_H2_G.9375_fs.kwy  20160926160131-Q_H2_G.96875_fs.kwy  20160926160141-Q_H2_G.984375_fs.kwy  20160926160151-Q_H2_G.9921875_fs.kwy  20160926160201-Q_H2_G.99609375_fs.kwy  20160926160211-Q_H2_G.998046875_fs.kwy  20160926160221-Q_H2_G.9990234375_fs.kwy  20160926160231-Q_H2_G1._fs.kwy  graph.eps  hist.eps
player/: ActHandler.cc  ActHandler.h  BasicPlayer.cc  BasicPlayer.h  CMakeLists.txt  ChoicePoint.h  CoodinationGraph.h  DemoExtension.cc  Formations.cc  GenericValues.cc  Geometry.cc  Geometry.h  Graph.cc  Graph.h  HandCodedAgent.cc  HandCodedAgent.h  HierarchicalFSM.cc  HierarchicalFSM.h  JointActionSpace.cc  JointActionSpace.h  JointOptionLearning.cc  JointOptionLearning.h  KeepawayPlayer.cc  KeepawayPlayer.h  Layers.h  LinearSarsaAgent.cc  LinearSarsaAgent.h  LinearSarsaLearner.cc  LinearSarsaLearner.h  Logger.cc  Logger.h  LoggerDraw.cc  LoggerDraw.h  Makefile  Objects.cc  PlayerSettings.cc  PlayerSettings.h  PytorchNeuralnetwork.h  SMDPAgent.cc  SMDPAgent.h  (+30 more)
results/: 20220504203930-Q_g1.0_l0.5_a0.125_w0.5_fsm_cem.log.kwy  20220505130609-Q_g1.0_l0.5_a0.125_w0.5_std25_cem.log.kwy  20220507143326-std1_cem.kwy
results/std 25/: 20220506115241-Q_g1.0_l0.5_a0.125_w0.5_fsm_cem_std25.kwy
tools/: 1.hist  1.out  20220412141938-Q_g1.0_l0.5_a0.125_w0.5_fsm.kwy  20220502200000-Q_g1.0_l0.5_a0.125_w0.5_fsm.kwy  Makefile  README.md  graph.eps  graph.gnuplot  graph.gnuplot.template  hist.cc  hist.eps  hist.gnuplot  hist.gnuplot.template  hist.sh  killserver  plotall.sh  watch.sh  winsum.cc  winsum.sh
